--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -27,6 +27,7 @@
         height: $header-shrink-height;
         box-shadow: $box-shadow;
         z-index: 100;
+        margin-bottom: 1rem;
 
         @include mobile {
             height: $header-mobile-height;
@@ -40,8 +41,22 @@
         height: 100%;
         pointer-events: none;
 
+        // @include tablet {
+        //     @include flex(center, flex-start);
+        //     inset: unset;
+        //     margin-left: 3rem;
+        // }
+
         img {
             height: 40px;
+
+            @include tablet {
+                height: 30px;
+            }
+
+            @include tablet {
+                height: 25px;
+            }
         }
     }
 
@@ -82,7 +97,7 @@
             &__item {
                 @include flex(center, center);
                 position: relative;
-                
+                cursor: pointer;
                 .header__quantity__cart {
                     position: absolute;
                     top: -2px;
@@ -116,6 +131,7 @@
             }
 
             @include tablet {
+                z-index: 101;
                 flex-direction: column;
                 background-color: $main-bg;
                 position: absolute;
@@ -143,6 +159,53 @@
                     position: absolute;
                     left: 20px;
                     font-size: 2rem;
+                }
+            }
+        }
+    }
+
+    &__search {
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(-100px);
+        transition: transform .3s ease;
+
+        &.active {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+
+            @include tablet {
+                margin-top: 0.5rem;
+            }
+        }
+
+        &__dropdown {
+            width: 30%;
+            position: fixed;
+            z-index: 100;
+            background-color: #fff;
+            border-radius: 5px;
+            margin-top: 5px;
+            overflow-y: auto;
+            max-height: 300px;
+            color: #000;
+            box-shadow: $box-shadow;
+
+            @include tablet {
+                width: 100%;
+            }
+            &__item {
+                @include flex(flex-start, flex-start);
+                padding: 0.5rem;
+
+                img {
+                    height: 60px;
+                    margin-right: 0.5rem;
+                }
+
+                &__info > * {
+                    margin-bottom: 0.5rem;
                 }
             }
         }
