--- a/src/components/hero-slide/HeroSlide.scss
+++ b/src/components/hero-slide/HeroSlide.scss
@@ -7,7 +7,11 @@
     position: relative;
     margin-bottom: 50px;
     margin-top: calc(#{$header-height} * -1);
+    transition: margin-top .3s ease;
 
+    &.active-search {
+        margin-top: calc(0 * -1);
+    }
     @include tablet {
         margin-top: calc(#{$header-tablet-height} * -1);
     }
