--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,13 +16,14 @@ $header-shrink-height: 70px;
 $box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
 $colors: (
-    "blue": #4267b2,
+    "blue": #5883ae,
     "orange": #fbb96b,
-    "pink": #fe7e73,
+    "pink": #ddb2b3,
     "white": #fff,
     "black": #000,
     "main": $main-color,
-    "red": #ff0000
+    "red": #ff0000,
+    "brown": #b36f36
 );
 
 $mobile-width: 600px;
